Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): dregexp has literal string only at the head
	  and successors are array.  [ruby-core:32682]

Tue Aug 10 11:26:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/un.rb (httpd): SIGQUIT and SIGHUP are not guaranteed to exist.

Sat Aug 14 17:48:41 2010  Narihiro Nakamura  <authorNari@gmail.com>

	* test/objspace/test_objspace.rb: added test for objspace.

	* ext/objspace/objspace.c: considers T_ZOMBIE by lazy sweep GC.

	* gc.c: considers that dsize was 0. [ruby-dev:42022]

Tue Aug 31 03:42:14 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): fix bug in r29146.
	  Initialize table even if cflag is 0; tr_find see whether
	  del is empty or not.

	* string.c (tr_find): nodel can't be NULL; if NULL, it means
	  it is not specified.

Mon Aug 30 15:00:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): initialize negating table when
	  negating string is given. [ruby-core:31851]

	* string.c (tr_find): add a sentence for the time when
	  target characters include negating one.

	* string.c (rb_str_count): move definition.

Sun Aug 29 23:54:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser/ruby.rb (RDoc#parse_call_parameters): don't
	  include assignment.  [Bug #3759], [ruby-dev:42154]

	* lib/rdoc/parser/ruby.rb (RDoc#parse_class): ignore non-constant
	  name signleton class.  [Bug #3759], [ruby-dev:42154]

Sat Sep 25 22:48:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): fix quoting.

Sat Sep 25 10:30:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): use -unexported_symbol only
	  when available.  http://trac.macports.org/ticket/26341

Sat Oct 16 10:54:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (CPP): already used in .c.i rule.

	* cygwin/GNUmakefile.in (DLLWRAP, WINDRES): add --driver-name and